Etapa2/y.output
Terminals unused in grammar

    TOKEN_ERROR


State 39 conflicts: 8 shift/reduce, 1 reduce/reduce
State 41 conflicts: 1 reduce/reduce
State 49 conflicts: 8 shift/reduce, 1 reduce/reduce
State 51 conflicts: 8 shift/reduce, 1 reduce/reduce
State 99 conflicts: 8 shift/reduce
State 121 conflicts: 8 shift/reduce
State 130 conflicts: 8 shift/reduce
State 135 conflicts: 8 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declaration

    2 declaration: declares declaration
    3            | declares

    4 declares: var_global ';'
    5         | function ';'

    6 function: TK_IDENTIFIER '(' parameter_list ')' '=' type '{' command_sequence '}'

    7 var_global: TK_IDENTIFIER '=' type ':' literal
    8           | TK_IDENTIFIER '=' type '[' LIT_INTEGER ']' ':' literal_list
    9           | TK_IDENTIFIER '=' type '[' LIT_INTEGER ']'

   10 literal_list: literal literal_list
   11             | literal
   12             | %empty

   13 literal: LIT_TRUE
   14        | LIT_FALSE
   15        | LIT_INTEGER
   16        | LIT_FLOAT
   17        | LIT_CHAR

   18 parameter_list: parameter ',' parameter_list
   19               | parameter
   20               | %empty

   21 parameter: TK_IDENTIFIER '=' type

   22 type: KW_BOOL
   23     | KW_INT
   24     | KW_FLOAT
   25     | KW_CHAR

   26 command_sequence: command command_sequence
   27                 | %empty

   28 command: TK_IDENTIFIER '=' expression
   29        | TK_IDENTIFIER '[' expression ']' '=' expression
   30        | KW_READ TK_IDENTIFIER
   31        | KW_PRINT print_list
   32        | KW_RETURN expression
   33        | flow_control
   34        | '{' command_sequence '}'
   35        | %empty

   36 print_list: print_element ',' print_list
   37           | print_element

   38 print_element: LIT_STRING
   39              | expression

   40 flow_control: KW_IF '(' expression ')' KW_THEN command
   41             | KW_IF '(' expression ')' KW_THEN command KW_ELSE command
   42             | KW_WHILE '(' expression ')' command
   43             | KW_LOOP '(' TK_IDENTIFIER ':' expression ',' expression ',' expression ')' command

   44 expression: TK_IDENTIFIER
   45           | TK_IDENTIFIER '[' expression ']'
   46           | TK_IDENTIFIER '(' parameter_list ')'
   47           | LIT_INTEGER
   48           | LIT_FLOAT
   49           | LIT_CHAR
   50           | '(' expression ')'
   51           | expression OPERATOR_LE expression
   52           | expression OPERATOR_GE expression
   53           | expression OPERATOR_EQ expression
   54           | expression OPERATOR_DIF expression
   55           | expression '+' expression
   56           | expression '-' expression
   57           | expression '*' expression
   58           | expression '/' expression
   59           | expression '<' expression
   60           | expression '>' expression
   61           | expression '|' expression
   62           | expression '^' expression
   63           | expression '~' expression
   64           | expression '.' expression
   65           | expression '&' expression


Terminals, with rules where they appear

    $end (0) 0
    '&' (38) 65
    '(' (40) 6 40 41 42 43 46 50
    ')' (41) 6 40 41 42 43 46 50
    '*' (42) 57
    '+' (43) 55
    ',' (44) 18 36 43
    '-' (45) 56
    '.' (46) 64
    '/' (47) 58
    ':' (58) 7 8 43
    ';' (59) 4 5
    '<' (60) 59
    '=' (61) 6 7 8 9 21 28 29
    '>' (62) 60
    '[' (91) 8 9 29 45
    ']' (93) 8 9 29 45
    '^' (94) 62
    '{' (123) 6 34
    '|' (124) 61
    '}' (125) 6 34
    '~' (126) 63
    error (256)
    KW_CHAR (258) 25
    KW_INT (259) 23
    KW_FLOAT (260) 24
    KW_BOOL (261) 22
    KW_IF (262) 40 41
    KW_THEN (263) 40 41
    KW_ELSE (264) 41
    KW_WHILE (265) 42
    KW_LOOP (266) 43
    KW_READ (267) 30
    KW_PRINT (268) 31
    KW_RETURN (269) 32
    OPERATOR_LE (270) 51
    OPERATOR_GE (271) 52
    OPERATOR_EQ (272) 53
    OPERATOR_DIF (273) 54
    TK_IDENTIFIER (274) 6 7 8 9 21 28 29 30 43 44 45 46
    LIT_INTEGER (275) 8 9 15 47
    LIT_FLOAT (276) 16 48
    LIT_TRUE (277) 13
    LIT_FALSE (278) 14
    LIT_CHAR (279) 17 49
    LIT_STRING (280) 38
    TOKEN_ERROR (281)


Nonterminals, with rules where they appear

    $accept (48)
        on left: 0
    program (49)
        on left: 1
        on right: 0
    declaration (50)
        on left: 2 3
        on right: 1 2
    declares (51)
        on left: 4 5
        on right: 2 3
    function (52)
        on left: 6
        on right: 5
    var_global (53)
        on left: 7 8 9
        on right: 4
    literal_list (54)
        on left: 10 11 12
        on right: 8 10
    literal (55)
        on left: 13 14 15 16 17
        on right: 7 10 11
    parameter_list (56)
        on left: 18 19 20
        on right: 6 18 46
    parameter (57)
        on left: 21
        on right: 18 19
    type (58)
        on left: 22 23 24 25
        on right: 6 7 8 9 21
    command_sequence (59)
        on left: 26 27
        on right: 6 26 34
    command (60)
        on left: 28 29 30 31 32 33 34 35
        on right: 26 40 41 42 43
    print_list (61)
        on left: 36 37
        on right: 31 36
    print_element (62)
        on left: 38 39
        on right: 36 37
    flow_control (63)
        on left: 40 41 42 43
        on right: 33
    expression (64)
        on left: 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65
        on right: 28 29 32 39 40 41 42 43 45 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65


State 0

    0 $accept: . program $end

    TK_IDENTIFIER  shift, and go to state 1

    program      go to state 2
    declaration  go to state 3
    declares     go to state 4
    function     go to state 5
    var_global   go to state 6


State 1

    6 function: TK_IDENTIFIER . '(' parameter_list ')' '=' type '{' command_sequence '}'
    7 var_global: TK_IDENTIFIER . '=' type ':' literal
    8           | TK_IDENTIFIER . '=' type '[' LIT_INTEGER ']' ':' literal_list
    9           | TK_IDENTIFIER . '=' type '[' LIT_INTEGER ']'

    '='  shift, and go to state 7
    '('  shift, and go to state 8


State 2

    0 $accept: program . $end

    $end  shift, and go to state 9


State 3

    1 program: declaration .

    $default  reduce using rule 1 (program)


State 4

    2 declaration: declares . declaration
    3            | declares .

    TK_IDENTIFIER  shift, and go to state 1

    $default  reduce using rule 3 (declaration)

    declaration  go to state 10
    declares     go to state 4
    function     go to state 5
    var_global   go to state 6


State 5

    5 declares: function . ';'

    ';'  shift, and go to state 11


State 6

    4 declares: var_global . ';'

    ';'  shift, and go to state 12


State 7

    7 var_global: TK_IDENTIFIER '=' . type ':' literal
    8           | TK_IDENTIFIER '=' . type '[' LIT_INTEGER ']' ':' literal_list
    9           | TK_IDENTIFIER '=' . type '[' LIT_INTEGER ']'

    KW_CHAR   shift, and go to state 13
    KW_INT    shift, and go to state 14
    KW_FLOAT  shift, and go to state 15
    KW_BOOL   shift, and go to state 16

    type  go to state 17


State 8

    6 function: TK_IDENTIFIER '(' . parameter_list ')' '=' type '{' command_sequence '}'

    TK_IDENTIFIER  shift, and go to state 18

    $default  reduce using rule 20 (parameter_list)

    parameter_list  go to state 19
    parameter       go to state 20


State 9

    0 $accept: program $end .

    $default  accept


State 10

    2 declaration: declares declaration .

    $default  reduce using rule 2 (declaration)


State 11

    5 declares: function ';' .

    $default  reduce using rule 5 (declares)


State 12

    4 declares: var_global ';' .

    $default  reduce using rule 4 (declares)


State 13

   25 type: KW_CHAR .

    $default  reduce using rule 25 (type)


State 14

   23 type: KW_INT .

    $default  reduce using rule 23 (type)


State 15

   24 type: KW_FLOAT .

    $default  reduce using rule 24 (type)


State 16

   22 type: KW_BOOL .

    $default  reduce using rule 22 (type)


State 17

    7 var_global: TK_IDENTIFIER '=' type . ':' literal
    8           | TK_IDENTIFIER '=' type . '[' LIT_INTEGER ']' ':' literal_list
    9           | TK_IDENTIFIER '=' type . '[' LIT_INTEGER ']'

    ':'  shift, and go to state 21
    '['  shift, and go to state 22


State 18

   21 parameter: TK_IDENTIFIER . '=' type

    '='  shift, and go to state 23


State 19

    6 function: TK_IDENTIFIER '(' parameter_list . ')' '=' type '{' command_sequence '}'

    ')'  shift, and go to state 24


State 20

   18 parameter_list: parameter . ',' parameter_list
   19               | parameter .

    ','  shift, and go to state 25

    $default  reduce using rule 19 (parameter_list)


State 21

    7 var_global: TK_IDENTIFIER '=' type ':' . literal

    LIT_INTEGER  shift, and go to state 26
    LIT_FLOAT    shift, and go to state 27
    LIT_TRUE     shift, and go to state 28
    LIT_FALSE    shift, and go to state 29
    LIT_CHAR     shift, and go to state 30

    literal  go to state 31


State 22

    8 var_global: TK_IDENTIFIER '=' type '[' . LIT_INTEGER ']' ':' literal_list
    9           | TK_IDENTIFIER '=' type '[' . LIT_INTEGER ']'

    LIT_INTEGER  shift, and go to state 32


State 23

   21 parameter: TK_IDENTIFIER '=' . type

    KW_CHAR   shift, and go to state 13
    KW_INT    shift, and go to state 14
    KW_FLOAT  shift, and go to state 15
    KW_BOOL   shift, and go to state 16

    type  go to state 33


State 24

    6 function: TK_IDENTIFIER '(' parameter_list ')' . '=' type '{' command_sequence '}'

    '='  shift, and go to state 34


State 25

   18 parameter_list: parameter ',' . parameter_list

    TK_IDENTIFIER  shift, and go to state 18

    $default  reduce using rule 20 (parameter_list)

    parameter_list  go to state 35
    parameter       go to state 20


State 26

   15 literal: LIT_INTEGER .

    $default  reduce using rule 15 (literal)


State 27

   16 literal: LIT_FLOAT .

    $default  reduce using rule 16 (literal)


State 28

   13 literal: LIT_TRUE .

    $default  reduce using rule 13 (literal)


State 29

   14 literal: LIT_FALSE .

    $default  reduce using rule 14 (literal)


State 30

   17 literal: LIT_CHAR .

    $default  reduce using rule 17 (literal)


State 31

    7 var_global: TK_IDENTIFIER '=' type ':' literal .

    $default  reduce using rule 7 (var_global)


State 32

    8 var_global: TK_IDENTIFIER '=' type '[' LIT_INTEGER . ']' ':' literal_list
    9           | TK_IDENTIFIER '=' type '[' LIT_INTEGER . ']'

    ']'  shift, and go to state 36


State 33

   21 parameter: TK_IDENTIFIER '=' type .

    $default  reduce using rule 21 (parameter)


State 34

    6 function: TK_IDENTIFIER '(' parameter_list ')' '=' . type '{' command_sequence '}'

    KW_CHAR   shift, and go to state 13
    KW_INT    shift, and go to state 14
    KW_FLOAT  shift, and go to state 15
    KW_BOOL   shift, and go to state 16

    type  go to state 37


State 35

   18 parameter_list: parameter ',' parameter_list .

    $default  reduce using rule 18 (parameter_list)


State 36

    8 var_global: TK_IDENTIFIER '=' type '[' LIT_INTEGER ']' . ':' literal_list
    9           | TK_IDENTIFIER '=' type '[' LIT_INTEGER ']' .

    ':'  shift, and go to state 38

    $default  reduce using rule 9 (var_global)


State 37

    6 function: TK_IDENTIFIER '(' parameter_list ')' '=' type . '{' command_sequence '}'

    '{'  shift, and go to state 39


State 38

    8 var_global: TK_IDENTIFIER '=' type '[' LIT_INTEGER ']' ':' . literal_list

    LIT_INTEGER  shift, and go to state 26
    LIT_FLOAT    shift, and go to state 27
    LIT_TRUE     shift, and go to state 28
    LIT_FALSE    shift, and go to state 29
    LIT_CHAR     shift, and go to state 30

    $default  reduce using rule 12 (literal_list)

    literal_list  go to state 40
    literal       go to state 41


State 39

    6 function: TK_IDENTIFIER '(' parameter_list ')' '=' type '{' . command_sequence '}'

    KW_IF          shift, and go to state 42
    KW_WHILE       shift, and go to state 43
    KW_LOOP        shift, and go to state 44
    KW_READ        shift, and go to state 45
    KW_PRINT       shift, and go to state 46
    KW_RETURN      shift, and go to state 47
    TK_IDENTIFIER  shift, and go to state 48
    '{'            shift, and go to state 49

    KW_IF          [reduce using rule 35 (command)]
    KW_WHILE       [reduce using rule 35 (command)]
    KW_LOOP        [reduce using rule 35 (command)]
    KW_READ        [reduce using rule 35 (command)]
    KW_PRINT       [reduce using rule 35 (command)]
    KW_RETURN      [reduce using rule 35 (command)]
    TK_IDENTIFIER  [reduce using rule 35 (command)]
    '{'            [reduce using rule 35 (command)]
    '}'            reduce using rule 27 (command_sequence)
    '}'            [reduce using rule 35 (command)]
    $default       reduce using rule 27 (command_sequence)

    command_sequence  go to state 50
    command           go to state 51
    flow_control      go to state 52


State 40

    8 var_global: TK_IDENTIFIER '=' type '[' LIT_INTEGER ']' ':' literal_list .

    $default  reduce using rule 8 (var_global)


State 41

   10 literal_list: literal . literal_list
   11             | literal .

    LIT_INTEGER  shift, and go to state 26
    LIT_FLOAT    shift, and go to state 27
    LIT_TRUE     shift, and go to state 28
    LIT_FALSE    shift, and go to state 29
    LIT_CHAR     shift, and go to state 30

    ';'       reduce using rule 11 (literal_list)
    ';'       [reduce using rule 12 (literal_list)]
    $default  reduce using rule 11 (literal_list)

    literal_list  go to state 53
    literal       go to state 41


State 42

   40 flow_control: KW_IF . '(' expression ')' KW_THEN command
   41             | KW_IF . '(' expression ')' KW_THEN command KW_ELSE command

    '('  shift, and go to state 54


State 43

   42 flow_control: KW_WHILE . '(' expression ')' command

    '('  shift, and go to state 55


State 44

   43 flow_control: KW_LOOP . '(' TK_IDENTIFIER ':' expression ',' expression ',' expression ')' command

    '('  shift, and go to state 56


State 45

   30 command: KW_READ . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 57


State 46

   31 command: KW_PRINT . print_list

    TK_IDENTIFIER  shift, and go to state 58
    LIT_INTEGER    shift, and go to state 59
    LIT_FLOAT      shift, and go to state 60
    LIT_CHAR       shift, and go to state 61
    LIT_STRING     shift, and go to state 62
    '('            shift, and go to state 63

    print_list     go to state 64
    print_element  go to state 65
    expression     go to state 66


State 47

   32 command: KW_RETURN . expression

    TK_IDENTIFIER  shift, and go to state 58
    LIT_INTEGER    shift, and go to state 59
    LIT_FLOAT      shift, and go to state 60
    LIT_CHAR       shift, and go to state 61
    '('            shift, and go to state 63

    expression  go to state 67


State 48

   28 command: TK_IDENTIFIER . '=' expression
   29        | TK_IDENTIFIER . '[' expression ']' '=' expression

    '='  shift, and go to state 68
    '['  shift, and go to state 69


State 49

   34 command: '{' . command_sequence '}'

    KW_IF          shift, and go to state 42
    KW_WHILE       shift, and go to state 43
    KW_LOOP        shift, and go to state 44
    KW_READ        shift, and go to state 45
    KW_PRINT       shift, and go to state 46
    KW_RETURN      shift, and go to state 47
    TK_IDENTIFIER  shift, and go to state 48
    '{'            shift, and go to state 49

    KW_IF          [reduce using rule 35 (command)]
    KW_WHILE       [reduce using rule 35 (command)]
    KW_LOOP        [reduce using rule 35 (command)]
    KW_READ        [reduce using rule 35 (command)]
    KW_PRINT       [reduce using rule 35 (command)]
    KW_RETURN      [reduce using rule 35 (command)]
    TK_IDENTIFIER  [reduce using rule 35 (command)]
    '{'            [reduce using rule 35 (command)]
    '}'            reduce using rule 27 (command_sequence)
    '}'            [reduce using rule 35 (command)]
    $default       reduce using rule 27 (command_sequence)

    command_sequence  go to state 70
    command           go to state 51
    flow_control      go to state 52


State 50

    6 function: TK_IDENTIFIER '(' parameter_list ')' '=' type '{' command_sequence . '}'

    '}'  shift, and go to state 71


State 51

   26 command_sequence: command . command_sequence

    KW_IF          shift, and go to state 42
    KW_WHILE       shift, and go to state 43
    KW_LOOP        shift, and go to state 44
    KW_READ        shift, and go to state 45
    KW_PRINT       shift, and go to state 46
    KW_RETURN      shift, and go to state 47
    TK_IDENTIFIER  shift, and go to state 48
    '{'            shift, and go to state 49

    KW_IF          [reduce using rule 35 (command)]
    KW_WHILE       [reduce using rule 35 (command)]
    KW_LOOP        [reduce using rule 35 (command)]
    KW_READ        [reduce using rule 35 (command)]
    KW_PRINT       [reduce using rule 35 (command)]
    KW_RETURN      [reduce using rule 35 (command)]
    TK_IDENTIFIER  [reduce using rule 35 (command)]
    '{'            [reduce using rule 35 (command)]
    '}'            reduce using rule 27 (command_sequence)
    '}'            [reduce using rule 35 (command)]
    $default       reduce using rule 27 (command_sequence)

    command_sequence  go to state 72
    command           go to state 51
    flow_control      go to state 52


State 52

   33 command: flow_control .

    $default  reduce using rule 33 (command)


State 53

   10 literal_list: literal literal_list .

    $default  reduce using rule 10 (literal_list)


State 54

   40 flow_control: KW_IF '(' . expression ')' KW_THEN command
   41             | KW_IF '(' . expression ')' KW_THEN command KW_ELSE command

    TK_IDENTIFIER  shift, and go to state 58
    LIT_INTEGER    shift, and go to state 59
    LIT_FLOAT      shift, and go to state 60
    LIT_CHAR       shift, and go to state 61
    '('            shift, and go to state 63

    expression  go to state 73


State 55

   42 flow_control: KW_WHILE '(' . expression ')' command

    TK_IDENTIFIER  shift, and go to state 58
    LIT_INTEGER    shift, and go to state 59
    LIT_FLOAT      shift, and go to state 60
    LIT_CHAR       shift, and go to state 61
    '('            shift, and go to state 63

    expression  go to state 74


State 56

   43 flow_control: KW_LOOP '(' . TK_IDENTIFIER ':' expression ',' expression ',' expression ')' command

    TK_IDENTIFIER  shift, and go to state 75


State 57

   30 command: KW_READ TK_IDENTIFIER .

    $default  reduce using rule 30 (command)


State 58

   44 expression: TK_IDENTIFIER .
   45           | TK_IDENTIFIER . '[' expression ']'
   46           | TK_IDENTIFIER . '(' parameter_list ')'

    '('  shift, and go to state 76
    '['  shift, and go to state 77

    $default  reduce using rule 44 (expression)


State 59

   47 expression: LIT_INTEGER .

    $default  reduce using rule 47 (expression)


State 60

   48 expression: LIT_FLOAT .

    $default  reduce using rule 48 (expression)


State 61

   49 expression: LIT_CHAR .

    $default  reduce using rule 49 (expression)


State 62

   38 print_element: LIT_STRING .

    $default  reduce using rule 38 (print_element)


State 63

   50 expression: '(' . expression ')'

    TK_IDENTIFIER  shift, and go to state 58
    LIT_INTEGER    shift, and go to state 59
    LIT_FLOAT      shift, and go to state 60
    LIT_CHAR       shift, and go to state 61
    '('            shift, and go to state 63

    expression  go to state 78


State 64

   31 command: KW_PRINT print_list .

    $default  reduce using rule 31 (command)


State 65

   36 print_list: print_element . ',' print_list
   37           | print_element .

    ','  shift, and go to state 79

    $default  reduce using rule 37 (print_list)


State 66

   39 print_element: expression .
   51 expression: expression . OPERATOR_LE expression
   52           | expression . OPERATOR_GE expression
   53           | expression . OPERATOR_EQ expression
   54           | expression . OPERATOR_DIF expression
   55           | expression . '+' expression
   56           | expression . '-' expression
   57           | expression . '*' expression
   58           | expression . '/' expression
   59           | expression . '<' expression
   60           | expression . '>' expression
   61           | expression . '|' expression
   62           | expression . '^' expression
   63           | expression . '~' expression
   64           | expression . '.' expression
   65           | expression . '&' expression

    OPERATOR_LE   shift, and go to state 80
    OPERATOR_GE   shift, and go to state 81
    OPERATOR_EQ   shift, and go to state 82
    OPERATOR_DIF  shift, and go to state 83
    '^'           shift, and go to state 84
    '~'           shift, and go to state 85
    '|'           shift, and go to state 86
    '.'           shift, and go to state 87
    '&'           shift, and go to state 88
    '>'           shift, and go to state 89
    '<'           shift, and go to state 90
    '+'           shift, and go to state 91
    '-'           shift, and go to state 92
    '*'           shift, and go to state 93
    '/'           shift, and go to state 94

    $default  reduce using rule 39 (print_element)


State 67

   32 command: KW_RETURN expression .
   51 expression: expression . OPERATOR_LE expression
   52           | expression . OPERATOR_GE expression
   53           | expression . OPERATOR_EQ expression
   54           | expression . OPERATOR_DIF expression
   55           | expression . '+' expression
   56           | expression . '-' expression
   57           | expression . '*' expression
   58           | expression . '/' expression
   59           | expression . '<' expression
   60           | expression . '>' expression
   61           | expression . '|' expression
   62           | expression . '^' expression
   63           | expression . '~' expression
   64           | expression . '.' expression
   65           | expression . '&' expression

    OPERATOR_LE   shift, and go to state 80
    OPERATOR_GE   shift, and go to state 81
    OPERATOR_EQ   shift, and go to state 82
    OPERATOR_DIF  shift, and go to state 83
    '^'           shift, and go to state 84
    '~'           shift, and go to state 85
    '|'           shift, and go to state 86
    '.'           shift, and go to state 87
    '&'           shift, and go to state 88
    '>'           shift, and go to state 89
    '<'           shift, and go to state 90
    '+'           shift, and go to state 91
    '-'           shift, and go to state 92
    '*'           shift, and go to state 93
    '/'           shift, and go to state 94

    $default  reduce using rule 32 (command)


State 68

   28 command: TK_IDENTIFIER '=' . expression

    TK_IDENTIFIER  shift, and go to state 58
    LIT_INTEGER    shift, and go to state 59
    LIT_FLOAT      shift, and go to state 60
    LIT_CHAR       shift, and go to state 61
    '('            shift, and go to state 63

    expression  go to state 95


State 69

   29 command: TK_IDENTIFIER '[' . expression ']' '=' expression

    TK_IDENTIFIER  shift, and go to state 58
    LIT_INTEGER    shift, and go to state 59
    LIT_FLOAT      shift, and go to state 60
    LIT_CHAR       shift, and go to state 61
    '('            shift, and go to state 63

    expression  go to state 96


State 70

   34 command: '{' command_sequence . '}'

    '}'  shift, and go to state 97


State 71

    6 function: TK_IDENTIFIER '(' parameter_list ')' '=' type '{' command_sequence '}' .

    $default  reduce using rule 6 (function)


State 72

   26 command_sequence: command command_sequence .

    $default  reduce using rule 26 (command_sequence)


State 73

   40 flow_control: KW_IF '(' expression . ')' KW_THEN command
   41             | KW_IF '(' expression . ')' KW_THEN command KW_ELSE command
   51 expression: expression . OPERATOR_LE expression
   52           | expression . OPERATOR_GE expression
   53           | expression . OPERATOR_EQ expression
   54           | expression . OPERATOR_DIF expression
   55           | expression . '+' expression
   56           | expression . '-' expression
   57           | expression . '*' expression
   58           | expression . '/' expression
   59           | expression . '<' expression
   60           | expression . '>' expression
   61           | expression . '|' expression
   62           | expression . '^' expression
   63           | expression . '~' expression
   64           | expression . '.' expression
   65           | expression . '&' expression

    OPERATOR_LE   shift, and go to state 80
    OPERATOR_GE   shift, and go to state 81
    OPERATOR_EQ   shift, and go to state 82
    OPERATOR_DIF  shift, and go to state 83
    '^'           shift, and go to state 84
    '~'           shift, and go to state 85
    '|'           shift, and go to state 86
    '.'           shift, and go to state 87
    '&'           shift, and go to state 88
    '>'           shift, and go to state 89
    '<'           shift, and go to state 90
    '+'           shift, and go to state 91
    '-'           shift, and go to state 92
    '*'           shift, and go to state 93
    '/'           shift, and go to state 94
    ')'           shift, and go to state 98


State 74

   42 flow_control: KW_WHILE '(' expression . ')' command
   51 expression: expression . OPERATOR_LE expression
   52           | expression . OPERATOR_GE expression
   53           | expression . OPERATOR_EQ expression
   54           | expression . OPERATOR_DIF expression
   55           | expression . '+' expression
   56           | expression . '-' expression
   57           | expression . '*' expression
   58           | expression . '/' expression
   59           | expression . '<' expression
   60           | expression . '>' expression
   61           | expression . '|' expression
   62           | expression . '^' expression
   63           | expression . '~' expression
   64           | expression . '.' expression
   65           | expression . '&' expression

    OPERATOR_LE   shift, and go to state 80
    OPERATOR_GE   shift, and go to state 81
    OPERATOR_EQ   shift, and go to state 82
    OPERATOR_DIF  shift, and go to state 83
    '^'           shift, and go to state 84
    '~'           shift, and go to state 85
    '|'           shift, and go to state 86
    '.'           shift, and go to state 87
    '&'           shift, and go to state 88
    '>'           shift, and go to state 89
    '<'           shift, and go to state 90
    '+'           shift, and go to state 91
    '-'           shift, and go to state 92
    '*'           shift, and go to state 93
    '/'           shift, and go to state 94
    ')'           shift, and go to state 99


State 75

   43 flow_control: KW_LOOP '(' TK_IDENTIFIER . ':' expression ',' expression ',' expression ')' command

    ':'  shift, and go to state 100


State 76

   46 expression: TK_IDENTIFIER '(' . parameter_list ')'

    TK_IDENTIFIER  shift, and go to state 18

    $default  reduce using rule 20 (parameter_list)

    parameter_list  go to state 101
    parameter       go to state 20


State 77

   45 expression: TK_IDENTIFIER '[' . expression ']'

    TK_IDENTIFIER  shift, and go to state 58
    LIT_INTEGER    shift, and go to state 59
    LIT_FLOAT      shift, and go to state 60
    LIT_CHAR       shift, and go to state 61
    '('            shift, and go to state 63

    expression  go to state 102


State 78

   50 expression: '(' expression . ')'
   51           | expression . OPERATOR_LE expression
   52           | expression . OPERATOR_GE expression
   53           | expression . OPERATOR_EQ expression
   54           | expression . OPERATOR_DIF expression
   55           | expression . '+' expression
   56           | expression . '-' expression
   57           | expression . '*' expression
   58           | expression . '/' expression
   59           | expression . '<' expression
   60           | expression . '>' expression
   61           | expression . '|' expression
   62           | expression . '^' expression
   63           | expression . '~' expression
   64           | expression . '.' expression
   65           | expression . '&' expression

    OPERATOR_LE   shift, and go to state 80
    OPERATOR_GE   shift, and go to state 81
    OPERATOR_EQ   shift, and go to state 82
    OPERATOR_DIF  shift, and go to state 83
    '^'           shift, and go to state 84
    '~'           shift, and go to state 85
    '|'           shift, and go to state 86
    '.'           shift, and go to state 87
    '&'           shift, and go to state 88
    '>'           shift, and go to state 89
    '<'           shift, and go to state 90
    '+'           shift, and go to state 91
    '-'           shift, and go to state 92
    '*'           shift, and go to state 93
    '/'           shift, and go to state 94
    ')'           shift, and go to state 103


State 79

   36 print_list: print_element ',' . print_list

    TK_IDENTIFIER  shift, and go to state 58
    LIT_INTEGER    shift, and go to state 59
    LIT_FLOAT      shift, and go to state 60
    LIT_CHAR       shift, and go to state 61
    LIT_STRING     shift, and go to state 62
    '('            shift, and go to state 63

    print_list     go to state 104
    print_element  go to state 65
    expression     go to state 66


State 80

   51 expression: expression OPERATOR_LE . expression

    TK_IDENTIFIER  shift, and go to state 58
    LIT_INTEGER    shift, and go to state 59
    LIT_FLOAT      shift, and go to state 60
    LIT_CHAR       shift, and go to state 61
    '('            shift, and go to state 63

    expression  go to state 105


State 81

   52 expression: expression OPERATOR_GE . expression

    TK_IDENTIFIER  shift, and go to state 58
    LIT_INTEGER    shift, and go to state 59
    LIT_FLOAT      shift, and go to state 60
    LIT_CHAR       shift, and go to state 61
    '('            shift, and go to state 63

    expression  go to state 106


State 82

   53 expression: expression OPERATOR_EQ . expression

    TK_IDENTIFIER  shift, and go to state 58
    LIT_INTEGER    shift, and go to state 59
    LIT_FLOAT      shift, and go to state 60
    LIT_CHAR       shift, and go to state 61
    '('            shift, and go to state 63

    expression  go to state 107


State 83

   54 expression: expression OPERATOR_DIF . expression

    TK_IDENTIFIER  shift, and go to state 58
    LIT_INTEGER    shift, and go to state 59
    LIT_FLOAT      shift, and go to state 60
    LIT_CHAR       shift, and go to state 61
    '('            shift, and go to state 63

    expression  go to state 108


State 84

   62 expression: expression '^' . expression

    TK_IDENTIFIER  shift, and go to state 58
    LIT_INTEGER    shift, and go to state 59
    LIT_FLOAT      shift, and go to state 60
    LIT_CHAR       shift, and go to state 61
    '('            shift, and go to state 63

    expression  go to state 109


State 85

   63 expression: expression '~' . expression

    TK_IDENTIFIER  shift, and go to state 58
    LIT_INTEGER    shift, and go to state 59
    LIT_FLOAT      shift, and go to state 60
    LIT_CHAR       shift, and go to state 61
    '('            shift, and go to state 63

    expression  go to state 110


State 86

   61 expression: expression '|' . expression
